--- a/c_code/a_basic/css/src/mpbo.css
+++ b/c_code/a_basic/css/src/mpbo.css
@@ -6,11 +6,32 @@
   margin:auto; background-color: #dfdfdf;}
 
 .part {
-  width:100%; height:300px; border:1px solid #777;}
+  width:100%; height:700px; border:1px solid #777;}
 .part > ul {
   margin: 0; padding: 0; list-style: none;  width: 100%; height: 100%;}
 .part > ul > li {
   float: left; width: 100px; height: 100px;  border:1px solid #0af;
   text-align: center; line-height:100px;}
 
+/* margin : 요소와 요소 사이의 거리(눈에 보이는 공간)
+   margin:10px; 위,오른쪽,아래,왼쪽 (4방향) 모두 동일한(10px) 여백을가진다.
+   margin:10px 30px; 위/아래(10), 좌/우(30)로 값을 각각 분배하여 여백을 가진다.
+   margin:10px 30px 50px; 위(10), 좌/우(30), 아래(50)로 값을 분배하여 여백을 가진다.
+   margin:10px 30px 50px 100px; 시계방향으로 각각 여백을 가진다.
+   margin-방향:50px; 원하는 방향을 기준으로 여백을 가진다.
+   단, margin을 중첩하여 사용할 경우에는, 
+       겹치는 부분이 나중에 작성한 부분으로 처리가 되므로, 주의 하여 사용할것
+*/
 .margin li:nth-child(1) { margin:10px; }
+.margin li:nth-child(2) { margin:10px 30px;}
+.margin li:nth-child(3) { margin:10px 30px 50px;}
+.margin li:nth-child(4) { margin:10px 30px 50px 100px;}
+.margin li:nth-child(5) { margin:0 0 0 100px;}
+.margin li:nth-child(6) { margin-top:30px; margin-left:50px; }
+.margin li:nth-child(7) { margin:20px; margin-top:70px; margin-right:10px; }
+/* -------------------------------------------------------------------------- */
+.padding > ul > li { text-align: left; line-height:20px; font-weight: bold;}
+.padding > ul > li:nth-child(2n - 1){background-color: #fa3;}
+.padding > ul > li:nth-child(2n){background-color: #3af;}
+
+.padding > ul > li:nth-child(1) {}
