--- a/c_code/a_basic/css/src/mpbo.css
+++ b/c_code/a_basic/css/src/mpbo.css
@@ -79,8 +79,62 @@ h1 {
   width:50%; height:100px; background-color: #fa0;
   margin-left:10%; margin-top:10%;
 }
+/* ---------------------------------------  */
+/* border: 외곽선
 
+*/
+.border ul li:nth-child(1) { 
+  border-width:10px;
+  border-style:solid; /* solid:직선, dotted:점선, dashed:쇄선, ridge, double ....... */
+  border-color:#fa8;
+}
+.border ul li:nth-child(2) { border:5px dotted #85f; }
+.border ul li:nth-child(3) { 
+  background-color: #fc7;
+  border-width:15px;
+  border-top-width:3px;
+  border-left-width:50px;
+  border-style:solid;
+  border-right-style:dotted;
+  border-bottom-style:ridge;
+  border-color:#f08;
+  border-left-color:#fa9;
+}
+.border ul li:nth-child(4) { 
+  background-color: #caa;
+  /* border:30px solid #fa0; */
+  border-top:10px solid #f03;
+  border-bottom:10px solid #fff;
+  border-left:none;  border-right:none;
+}
+.border ul li:nth-child(5) {
+  border:30px solid #0af;
+  border-top-color:#fff;
+}
 
+.border ul li:nth-child(6) {
+  width:0; height:0;
 
-  /* ---------------------------------------  */
+  border:30px solid #f03;
+  border-top-width:0;
+  border-bottom-width:50px;
 
+  border-top-color:transparent;
+  border-left-color:rgba(255,0,51,0);
+  border-right-color:hsla(358, 100%, 50%, 0);
+
+  font-size:0.4rem;
+  text-indent:-20px;
+  line-height:70px;
+  color:#fff; font-weight: bold;
+  }
+  .border ul li:nth-child(7) {
+    border:5px solid #f03;
+    border-left-color:transparent;
+    border-bottom-color:transparent;
+    transform:rotate(45deg);
+  }
+  .border ul li:nth-child(7) > span {
+    display: block; width: 100%; height: 100%;
+    transform:rotate(-45deg);
+  }
