--- a/c_code/b_layout_test/css/src/layout_02_result.css
+++ b/c_code/b_layout_test/css/src/layout_02_result.css
@@ -105,25 +105,43 @@ ul,ol,li,dl,dt,dd {margin:0; padding:0; list-style:none;}
 .con_area {
   width:1300px; height:auto; min-height:400px; margin:auto;
   background-color: var(--step2-color);}
+
 /* #populaContentBox ========== */
   #popularContentBox {
     height: auto; background-color: #bbb;  }
-    #popularContentBox .con_area { min-height:470px; }
+    /* #popularContentBox .con_area { min-height:470px; } */
+    .pop_con_area { 
+      min-height:470px; 
+      padding:20px 63px; box-sizing: border-box;}
+    .pop_card { 
+      float:left; width:350px; height:430px;
+      margin-left:62px; padding:10px 8px;
+      box-sizing: border-box;
+      background-color: #fc7;
+    }
+    .pop_con_area > div:nth-of-type(1){
+      margin-left: 0;}
+      .img_context { 
+        width:100%; height:200px; margin-bottom:14px;
+        background-color: #f7f;}
+      .narr_context { width:100%; height:200px; background-color: #f7f;}
+
+
 /* #newContentBox ========== */
   #newContentBox {
     height:auto;     margin-bottom:80px; padding-top:60px; 
     background-color: #aaa;  }
-    #newContentBox .con_area { min-height:700px; }
+    .new_con_area { min-height:700px; }
 /* #recommendedContentBox ========== */
   #recommendedContentBox {
     height:auto;     margin-bottom:80px; padding-top:30px;
     background-color: #bbb;  }
-    #recommendedContentBox .con_area { min-height:440px; }
+    .recom_con_area { min-height:440px; }
 /* #communityBox ========== */
   #communityBox {
     height:auto;     margin-bottom:80px; padding-top:60px;
     background-color: #ddd; }
-    #communityBox .con_area { min-height:600px; }
+    .community_area { min-height:600px; }
 
 /* #miniAdBox ========== */
   #miniAdBox {
