--- a/c_code/a_basic/css/src/position_02.css
+++ b/c_code/a_basic/css/src/position_02.css
@@ -18,7 +18,8 @@ ul,ol,li,dl,dt,dd {margin:0; padding: 0;}
 }
 
 #headBox {
-  position:fixed; top:0; left:0; right:0; margin:auto;
+  position:fixed; top:0; left:0; right:0; z-index:1000;
+  margin:auto;
   width:inherit; height: 150px; border-bottom:2px solid #555; padding:25px; box-sizing: border-box;
   background-color: #7cf;}
 
@@ -33,15 +34,45 @@ h1{ width: 90%; height: 100px; margin:auto; background-color: #fff;}
   width: 300px; height: 100px; background-color: #aaa;}
 
   /* --------------------------- */
-  .modal_window { 
+  .modal_window { display: none;
     position: fixed; top: 0; left: 0;
     width: 100%; height: 100%; background-color: rgba(51,51,51,0.3);}
   .modal_message { 
     position:absolute; 
     /* top: 0; bottom: 0; left:0; right:0; margin:auto; */
     /* top:calc(50% - 125px); left:calc(50% - 250px);  */
-    top:50%; left:50%; margin-top:-125px; margin-left:-250px;
+    /* top:50%; left:50%; margin-top:-125px; margin-left:-250px; */
+    /* bottom:50%; right:50%; margin-bottom:-125px; margin-right:-250px; */
+
+    /* transform은 자신의 크기를 기준으로 %값을 가진다. */
+    /* left:50%; top:50%; transform:translate(-50%, -50%); */
+    right:50%; bottom:50%; transform:translate(50%, 50%);
 
     width: 500px; height: 250px; background-color: #fff;
     padding:20px; box-sizing: border-box;
     border-radius:10px; box-shadow:0 0 10px rgba(51,51,51,0.7);}
+    /* ---------------------------------------- */
+  .side { 
+    position:fixed; top:50%; left:50%; margin-left:500px;
+    width:150px; height:400px; background-color: #fc8;}
+/* =================================================== */
+#viewBox {
+  position: relative; z-index:500;
+  width:900px; height:400px; margin:0 auto; background-color: #fff;}
+  #viewBox > h2 { width:0; height:0; overflow: hidden; }
+  .view_indicator {
+    position: absolute; right:30px; bottom:40px; z-index:50;
+    width:200px; height:50px; background-color: #777;}
+  .next_btn {
+    position:absolute; top:50%; right:-25px; z-index:40;
+    margin-top:-25px; width:50px; height:50px; background-color: #777;}
+  .prev_btn {
+    position:absolute; top:50%; left:-25px; z-index:40;
+    margin-top:-25px; width:50px; height:50px; background-color: #777;}    
+  .view_area {position:relative; z-index:30; width: 100%; height: 100%; background-color: #ddd;}
+    .view_area div {position: absolute; top:0; left:0; width: 100%; height:100%; }
+    .adv_01 { z-index:5; background-color: #F54;}
+    .adv_02 { z-index:4; background-color: #C54;}
+    .adv_03 { z-index:3; background-color: #EB9;}
+    .adv_04 { z-index:2; background-color: #ED8;}
+    .adv_05 { z-index:1; background-color: #DD7;}
