--- a/c_code/b_layout_test/css/base/reset.css
+++ b/c_code/b_layout_test/css/base/reset.css
@@ -1,8 +1,13 @@
 @charset "UTF-8";
-/* reset.css */
-
-* {margin:0; padding:0;
-  font-family:sans-serif;}
+/* reset.css: 
+웹페이지 디자인작업을위해, 
+매번 처리해야하는 번거로운 작업을 미리 설정하여 초기화 시키는 처리 */
+html,body {margin:0;}
+h1, h2, h3, h4, h5, h6, p, div { margin:0; padding:0; }
+ul,ol,li,dl,dt,dd {margin:0; padding:0; list-style:none;}
+button { margin:0; padding:0; border:0; 
+         background-color: transparent; cursor:pointer; }
+a { text-decoration:none; color:inherit; }
 
 hr {width:100%; height:0;
     border-bottom:2px solid #333;}
