--- a/c_code/b_layout_test/css/src/layout_02_result.css
+++ b/c_code/b_layout_test/css/src/layout_02_result.css
@@ -1,3 +1,10 @@
-@charset "UTF-8";
+/* @charset "UTF-8"; */
 /* layout_02_result.css */
 /* design.css */
+@import url("./layout_02/layout_02_result-wrap.css");
+@import url("./layout_02/layout_02_result-headBox.css");
+@import url("./layout_02/layout_02_result-adViewBox.css");
+@import url("./layout_02/layout_02_result-localNavBox.css");
+@import url("./layout_02/layout_02_result-content_area.css");
+@import url("./layout_02/layout_02_result-miniAdBox.css");
+@import url("./layout_02/layout_02_result-footBox.css");
