--- a/c_code/a_basic/css/src/ir_is.css
+++ b/c_code/a_basic/css/src/ir_is.css
@@ -13,9 +13,9 @@
     width: 90%; height:auto; padding:2rem; box-sizing: border-box; border:1px solid #333;}
 
   .part ul { width: 100%; height: auto; margin:0; padding:0; list-style: none; }
-  .part ul li { 
+  .part .ir li { 
     width: 100px; height: 100px; margin-bottom:1rem; background-color: #0af;}
-  .part a { 
+  .ir a { 
     display: block; width: 100%; height: 100%; 
     border-radius:100%; background-color: #fff; }
 
@@ -51,3 +51,34 @@
     .hidden_text {
       position: relative; z-index:-1; width: 0; height: 0;
     }
+
+    /* ---------------------------------------------------- */
+  .clearfix:after,
+  .clearfix::after{content:" "; display: block; clear: both;}
+  .is {width: 100%; height:auto; padding:10px; box-sizing: border-box; background-color: #777;}
+  .is li{width:102px; height:107px; margin:5px; background-color: #fc5; float:left;}
+  .is a {display: block; width: 100%; height: 100%;}
+  .is button {
+    display: block; width: 100%; height: 100%; 
+    border:0; background-color: transparent; cursor: pointer;}
+
+    .is li:nth-child(n + 1):nth-child(-n + 5),
+    .is li>a, 
+    .is li>button { 
+      background-image: url("../../img/background_exam/ms_icon.png");
+      background-repeat: no-repeat;}
+
+    .is li span {display: block; width: 0; height: 0; overflow: hidden;}
+    .is li:nth-child(1) { background-position: 0 0;}
+    .is li:nth-child(2) { background-position: -247px 0;}
+    .is li:nth-child(3) { background-position: 0 -122px;}
+    .is li:nth-child(4) { background-position: -247px -244px;}
+    .is li:nth-child(5) { background-position: -494px -244px;}
+    .is li:nth-child(6) a { background-position: -494px -122px;}
+    .is li:nth-child(7) a { background-position: -494px -366px;}
+    .is li:nth-child(8) a { background-position: -741px -488px;}
+    .is li:nth-child(9) button { background-position: -987px -488px;}
+    .is li:nth-child(10) button { background-position: -1234px -488px;}
+    /* .is li:nth-child(10) button { background-position: 100% 100%;} */
+
+    
